@@ -1,5 +1,5 @@
 AC_PREREQ(2.53)
-AC_INIT(libavg, 0.8.0.pre2, uzadow@libavg.de)
+AC_INIT(libavg, 0.8.0, uzadow@libavg.de)
 AC_CANONICAL_TARGET
 
 AC_DISABLE_STATIC
@@ -7,7 +7,7 @@ AC_PROG_LIBTOOL
 
 MAJOR_VERSION=0
 MINOR_VERSION=8
-MICRO_VERSION=0.pre1
+MICRO_VERSION=0
 VERSION=$MAJOR_VERSION.$MINOR_VERSION.$MICRO_VERSION dnl
 
 AC_SUBST(VERSION)
